--- a/index.html
+++ b/index.html
@@ -13,40 +13,65 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="top">
-        <div>
-          <a href="#">
-            <img
-              class="logo"
-              src="./pictures/chas-academy-emblem.png"
-              alt="logo"
-            />
-          </a>
+    <div class="container">
+      <header class="header">
+        <div class="top">
+          <div>
+            <a href="#">
+              <img
+                class="logo"
+                src="./pictures/chas-academy-emblem.png"
+                alt="logo"
+              />
+            </a>
+          </div>
+          <nav class="nav">
+            <a href="#" class="link">Om oss</a>
+            <a href="#" class="link">Aktuellt</a>
+            <a href="#" class="link">Kontakt</a>
+            <a href="#" class="apply-button">ANSÖK</a>
+          </nav>
         </div>
-        <nav class="nav">
-          <a href="#" class="link">Om oss</a>
-          <a href="#" class="link">Aktuellt</a>
-          <a href="#" class="link">Kontakt</a>
-          <a href="#" class="apply-button">Ansök</a>
-        </nav>
-      </div>
-      <div class="hero">
-        <h1>CHAS ACADEMY - <br />STEGET NÄRMARE EN <br />KARRIÄR INOM IT</h1>
-        <h2 class="h2">
-          CHAS ACADEMY ÄR EN YRKESHÖGSKOLA<br />
-          SOM FÖRBEREDER DIG FÖR ETT <br />ARBETSLIV INOM IT. VILL DU VARA
-          MED<br />
-          PÅ RESAN TILL VÄRLDENS BÄSTA<br />
-          BRANCH?
-        </h2>
-        <a href="#" class="apply-button">Ansök</a>
-      </div>
-    </header>
+        <div class="hero">
+          <h1>CHAS ACADEMY - <br />STEGET NÄRMARE EN <br />KARRIÄR INOM IT</h1>
+          <h2 class="h2">
+            CHAS ACADEMY ÄR EN YRKESHÖGSKOLA<br />
+            SOM FÖRBEREDER DIG FÖR ETT <br />ARBETSLIV INOM IT. VILL DU VARA
+            MED<br />
+            PÅ RESAN TILL VÄRLDENS BÄSTA<br />
+            BRANCH?
+          </h2>
+          <a href="#" class="apply-button">ANSÖK</a>
+        </div>
+      </header>
 
-    <div class="info"></div>
-    <div class="recomendation"></div>
-    <div class="callToAction"></div>
-    <footer class="footer"></footer>
+      <div class="info"></div>
+      <div class="recommendation">
+        <div class="recommendation-box">
+          <img
+            class="studentPic"
+            src="./pictures/recommendation1.webp"
+            alt="student"
+          />
+        </div>
+        <div class="recommendation-box">
+          <h2>VAD SÄGER VÅRA STUDENTER?</h2>
+          <img
+            class="studentPic"
+            src="./pictures/recommendation2.webp"
+            alt="student"
+          />
+        </div>
+        <div class="recommendation-box">
+          <img
+            class="studentPic"
+            src="./pictures/recommendation3.webp"
+            alt="student"
+          />
+        </div>
+      </div>
+      <div class="callToAction"></div>
+      <footer class="footer"></footer>
+    </div>
   </body>
 </html>
