a lot of changes, added video to call to action box

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -26,9 +30,27 @@
             </a>
           </div>
           <nav class="nav">
-            <a href="#" class="link">Om oss</a>
+            <a href="#" class="link"
+              >YH-utbildningar
+              <img class="chevron" src="./pictures/chevron.svg" alt="chevron"
+            /></a>
+            <a href="#" class="link"
+              >Studera hos oss
+              <img class="chevron" src="./pictures/chevron.svg" alt="chevron"
+            /></a>
+            <a href="#" class="link"
+              >Chas Upskill
+              <img class="chevron" src="./pictures/chevron.svg" alt="chevron"
+            /></a>
+            <a href="#" class="link"
+              >För företag
+              <img class="chevron" src="./pictures/chevron.svg" alt="chevron"
+            /></a>
+            <a href="#" class="link"
+              >Om oss
+              <img class="chevron" src="./pictures/chevron.svg" alt="chevron"
+            /></a>
             <a href="#" class="link">Aktuellt</a>
-            <a href="#" class="link">Kontakt</a>
             <a href="#" class="apply-button">ANSÖK</a>
           </nav>
         </div>
@@ -44,33 +66,115 @@
           <a href="#" class="apply-button">ANSÖK</a>
         </div>
       </header>
-
-      <div class="info"></div>
-      <div class="recommendation">
-        <div class="recommendation-box">
-          <img
-            class="studentPic"
-            src="./pictures/recommendation1.webp"
-            alt="student"
-          />
+      <div class="info">
+        <div class="info-box1">
+          <img class="modell" src="./pictures/bildram.webp" alt="modell" />
         </div>
-        <div class="recommendation-box">
-          <h2>VAD SÄGER VÅRA STUDENTER?</h2>
-          <img
-            class="studentPic"
-            src="./pictures/recommendation2.webp"
-            alt="student"
-          />
-        </div>
-        <div class="recommendation-box">
-          <img
-            class="studentPic"
-            src="./pictures/recommendation3.webp"
-            alt="student"
-          />
+        <div class="info-box2">
+          <h3>LÄR KÄNNA OSS</h3>
+          <h2>CHAS ACADEMY</h2>
+          <p>
+            Vi kan IT! Och snart kan du också det. Med pedagogik och kunskap
+            stöttar våra branschledande huvudlärare våra studerande i resan från
+            drömjobb till verklighet. Här på Chas Academy är vi ett
+            sammansvetsat gäng som drivs av samma mål - att skapa den bästa
+            yrkeshögskolan med moderna IT-utbildningar som leder till en ny
+            karriär. Som del av det ledande bolaget inom IT, Chas Visual
+            Management, har vi över 10 års branscherfarenhet i ryggen och ett
+            engagerat nätverk vid vår sida. Välkommen att joina oss på Chas
+            Academy!
+          </p>
+          <div>
+            <a href="#" class="info-apply">ANSÖK DIREKT</a>
+            <a href="#" class="info-button">LÄS MER OM OSS</a>
+          </div>
         </div>
       </div>
-      <div class="callToAction"></div>
+      <div class="recommendation-container">
+        <h2>VAD SÄGER VÅRA STUDENTER?</h2>
+        <div class="recommendation">
+          <div class="recommendation-box">
+            <div>
+              <img
+                class="studentPic"
+                src="./pictures/recommendation1.webp"
+                alt="student"
+              />
+            </div>
+            <div>
+              <h3>KUL OCH UTMANANDE</h3>
+              <p>
+                “Jag valde Fullstack för att jag älskar utmaningar och det är
+                bra framtidsutsikter, raka motsatsen till det jag satt och
+                gjorde när jag sökte utbildningen. Det blev på Chas Academy för
+                att jag hade läst mycket bra om ledningen och gillar upplägget
+                så nära närings- och arbetslivet!”
+              </p>
+              <h3>– JOHANNES LEPSIUS</h3>
+            </div>
+          </div>
+          <div class="recommendation-box">
+            <div></div>
+            <div>
+              <img
+                class="studentPic"
+                src="./pictures/recommendation2.webp"
+                alt="student"
+              />
+            </div>
+            <div>
+              <h3>BÄSTA FÖRUTSÄTTNINGARNA</h3>
+              <p>
+                ”För mig är det viktigt att skapa en bättre framtid för mig och
+                de framtida generationerna. Jag går andra året på Chas Academys
+                utbildning UX-designer med kravkompetens och får varje dag nya
+                kunskaper som kommer ge mig de förutsättningar jag behöver för
+                att kunna göra detta i mitt yrkesliv”
+              </p>
+              <h3>– KLEOPATRA PAPADOPOULOU</h3>
+            </div>
+          </div>
+          <div class="recommendation-box">
+            <div>
+              <img
+                class="studentPic"
+                src="./pictures/recommendation3.webp"
+                alt="student"
+              />
+            </div>
+            <div>
+              <h3>SPÄNNANDE</h3>
+              <p>
+                ”Programmering känns spännande och programmerare känns som ett
+                yrke med bra framtidsutsikter. Fullstack för att jag ville få en
+                bra bredd på kunskapen.”
+              </p>
+              <h3>– SEBASTIAN GERSTEL SOLLERMAN</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="callToAction">
+        <div class="callToAction-box">
+          <h3>Studera hos oss</h3>
+          <h2>RESERVANTAGNINGEN ÄR ÖPPEN</h2>
+          <p>Reservantagningen är öppen så ta chansen och ansök redan idag!</p>
+        </div>
+        <div class="callToAction-box">
+          <div>
+            <video
+              playsinline=""
+              autoplay=""
+              muted=""
+              loop=""
+              type="video/mp4"
+              poster="https://image.mux.com/u2uRmuu00uiEB5f15rHfsU700pIL5a6Xzv/thumbnail.png"
+              src="https://stream.mux.com/u2uRmuu00uiEB5f15rHfsU700pIL5a6Xzv/high.mp4"
+              class="callToAction-box-video"
+            ></video>
+          </div>
+        </div>
+      </div>
       <footer class="footer"></footer>
     </div>
   </body>
