added grid to footer

--- a/index.html
+++ b/index.html
@@ -159,6 +159,10 @@
           <h3>Studera hos oss</h3>
           <h2>RESERVANTAGNINGEN ÄR ÖPPEN</h2>
           <p>Reservantagningen är öppen så ta chansen och ansök redan idag!</p>
+          <div>
+            <a href="#" class="cta-button-how">HUR ANSÖKER JAG?</a>
+            <a href="#" class="cta-button-apply">ANSÖK DIREKT</a>
+          </div>
         </div>
         <div class="callToAction-box">
           <div>
