added logo, link and background image to footer

--- a/index.html
+++ b/index.html
@@ -66,6 +66,31 @@
           <a href="#" class="apply-button">ANSÖK</a>
         </div>
       </header>
+      <div class="callToAction">
+        <div class="callToAction-box">
+          <h3>STUDERA HOS OSS</h3>
+          <h2>RESERVANTAGNINGEN ÄR ÖPPEN</h2>
+          <p>Reservantagningen är öppen så ta chansen och ansök redan idag!</p>
+          <div>
+            <a href="#" class="cta-button-how">HUR ANSÖKER JAG?</a>
+            <a href="#" class="cta-button-apply">ANSÖK DIREKT</a>
+          </div>
+        </div>
+        <div class="callToAction-box">
+          <div>
+            <video
+              playsinline=""
+              autoplay=""
+              muted=""
+              loop=""
+              type="video/mp4"
+              poster="https://image.mux.com/u2uRmuu00uiEB5f15rHfsU700pIL5a6Xzv/thumbnail.png"
+              src="https://stream.mux.com/u2uRmuu00uiEB5f15rHfsU700pIL5a6Xzv/high.mp4"
+              class="callToAction-box-video"
+            ></video>
+          </div>
+        </div>
+      </div>
       <div class="info">
         <div class="info-box1">
           <img class="modell" src="./pictures/bildram.webp" alt="modell" />
@@ -154,32 +179,86 @@
           </div>
         </div>
       </div>
-      <div class="callToAction">
-        <div class="callToAction-box">
-          <h3>Studera hos oss</h3>
-          <h2>RESERVANTAGNINGEN ÄR ÖPPEN</h2>
-          <p>Reservantagningen är öppen så ta chansen och ansök redan idag!</p>
-          <div>
-            <a href="#" class="cta-button-how">HUR ANSÖKER JAG?</a>
-            <a href="#" class="cta-button-apply">ANSÖK DIREKT</a>
+
+      <footer class="footer">
+        <div class="footer-image">
+          <div class="footer-box-one">
+            <h2>VILL DU JOBBA INOM <br />VÄRLDENS BÄSTA <br />BRANSCH?</h2>
+            <div>
+              <a class="footer-apply-btn" href="#">ANSÖK NU</a>
+            </div>
           </div>
         </div>
-        <div class="callToAction-box">
-          <div>
-            <video
-              playsinline=""
-              autoplay=""
-              muted=""
-              loop=""
-              type="video/mp4"
-              poster="https://image.mux.com/u2uRmuu00uiEB5f15rHfsU700pIL5a6Xzv/thumbnail.png"
-              src="https://stream.mux.com/u2uRmuu00uiEB5f15rHfsU700pIL5a6Xzv/high.mp4"
-              class="callToAction-box-video"
-            ></video>
+        <div class="footer-box-two">
+          <div class="contact-div">
+            <a href="#">Hem</a>
+            <a href="#">YH-Program</a>
+            <a href="#">Om oss</a>
+            <a href="#">Så ansöker du</a>
+            <a href="#">Kontakt</a>
+            <a href="#">Aktuellt</a>
+            <a href="#">Integritetspolicy</a>
+            <a href="#">Jobba hos oss</a>
+          </div>
+          <div class="contact-div">
+            <h3>Kontakta oss:</h3>
+            <div>
+              <h3>Mail</h3>
+              <p>info@chasacademy.se</p>
+            </div>
+            <div>
+              <h3>Adress</h3>
+              <p>
+                Arenavägen 61
+                <br />
+                121 77 Johanneshov
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-      <footer class="footer"></footer>
+        <div class="footer-box-three">
+          <img class="footer-logo" src="./pictures/footer-logo.png" alt="" />
+          <h3>FÖLJ OSS</h3>
+          <div class="footer-icons">
+            <a href="https://www.facebook.com" target="_blank">
+              <img
+                alt="Logo for Facebook"
+                src="https://www.datocms-assets.com/91872/1681994525-chas_facebook_icon.svg"
+                width="38"
+                height="38"
+                decoding="async"
+                data-nimg="1"
+                loading="lazy"
+                style="color: transparent"
+              />
+            </a>
+            <a href="https://www.instagram.com" target="_blank">
+              <img
+                alt="Logo for Instagram"
+                src="https://www.datocms-assets.com/91872/1681994545-chas_instagram_icon.svg"
+                width="38"
+                height="38"
+                decoding="async"
+                data-nimg="1"
+                loading="lazy"
+                style="color: transparent"
+              />
+            </a>
+            <a href="https://www.youtube.com" target="_blank">
+              <img
+                alt="Logo for Youtube"
+                src="https://www.datocms-assets.com/91872/1681994553-chas_youtube_icon.svg"
+                width="38"
+                height="38"
+                decoding="async"
+                data-nimg="1"
+                loading="lazy"
+                style="color: transparent"
+              />
+            </a>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
